make table detection conservative for two-column documents